--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="DKAN is an open-source data management platform. It treats data as content so that you can easily publish, manage, and maintain your open data no matter the size of your team or the level of technical expertise."
+      content="DKAN is an open-source data management platform."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/dkan-avatar-blue.png" />
     <!--
